// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format API formatDate() options falls back and warns on invalid Intl.DateTimeFormat options 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatDate() options handles missing named formats and warns 1`] = `
Array [
  "UNSUPPORTED_FORMATTER",
]
`;
